syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {}

  rpc CreateUser(stream User) returns (UserList) {}

  rpc SplitCharacters(SplitCharactersRequest) returns (stream SplitCharactersResponse) {}

  rpc SplitCharactersStream(stream SplitCharactersRequest) returns (stream SplitCharactersResponse) {}
}

message GetUserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string name = 2;
}

message UserList {
  repeated User users = 1;
}

message SplitCharactersRequest {
  string name = 1;
}

message SplitCharactersResponse {
  string char = 1;
}